# pymatgen-io-fleur

./: .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  requirements-ci.txt  setup.cfg  setup.py
.github/workflows/: linting.yml  pypi_publish.yml  testing.yml
pymatgen/io/fleur/: __init__.py  fleurinput.py
pymatgen/io/fleur/tests/: test_fleurinput.py
test-files/: inp.xml  inp_film.xml
